force-app/main/default/objects/Travels_Expenses__c/Travels_Expenses__c.object-meta.xml
<CustomObject>
    <label>Travels &amp; Expense</label>
    <nameField>
        <displayFormat>TE-{0000}</displayFormat>
        <label>T&amp;E ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travels &amp; Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>