force-app/main/default/objects/Travels_Expenses__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <inlineHelpText>Please Enter End Date &amp; Time of Expense</inlineHelpText>
    <label>End Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>