force-app/main/default/objects/Travels_Expenses__c/fields/Purpose_Of_Travel__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Of_Travel__c</fullName>
    <label>Purpose Of Travel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales/Pre-Sales Meetings</fullName>
            </value>
            <value>
                <fullName>Customer Meeting/Workshops</fullName>
            </value>
            <value>
                <fullName>Consulting &amp; Implementation Engagement</fullName>
            </value>
            <value>
                <fullName>Customer Production Support</fullName>
            </value>
            <value>
                <fullName>T&amp;M Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>