force-app/main/default/objects/Travels_Expenses__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <inlineHelpText>Please Enter the Start Date &amp; Time of relevant Expense Request</inlineHelpText>
    <label>Start Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>