force-app/main/default/objects/Travels_Expenses__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <label>Total Expenses</label>
    <summarizedField>T_E_Line_Items__c.Expense_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>T_E_Line_Items__c.Type_Of_Expense__c</field>
        <operation>equals</operation>
        <value>Food Expenses, Car/Cab Expenses, Client Entertainment, Mobile &amp; WIFI Expenses, Flight Expenses, Train Expenses</value>
    </summaryFilterItems>
    <summaryForeignKey>T_E_Line_Items__c.Travels_Expense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>