force-app/main/default/objects/Travels_Expenses__c/recordTypes/Certifications_Courses.recordType-meta.xml
<RecordType>
    <fullName>Certifications_Courses</fullName>
    <active>true</active>
    <label>Certifications &amp; Courses</label>
</RecordType>