force-app/main/default/objects/Travels_Expenses__c/recordTypes/Domestic_Billable.recordType-meta.xml
<RecordType>
    <fullName>Domestic_Billable</fullName>
    <active>true</active>
    <label>Domestic Billable Travel Requests</label>
</RecordType>