force-app/main/default/objects/Travels_Expenses__c/recordTypes/Domestic_Non_Billable_Travel_Requests.recordType-meta.xml
<RecordType>
    <fullName>Domestic_Non_Billable_Travel_Requests</fullName>
    <active>true</active>
    <label>Domestic Non-Billable Travel Requests</label>
</RecordType>