force-app/main/default/objects/Travels_Expenses__c/recordTypes/International_Billable_Travel_Requests.recordType-meta.xml
<RecordType>
    <fullName>International_Billable_Travel_Requests</fullName>
    <active>true</active>
    <label>International Billable Travel Requests</label>
</RecordType>