force-app/main/default/objects/Travels_Expenses__c/recordTypes/Miscellaneous_Expenses.recordType-meta.xml
<RecordType>
    <fullName>Miscellaneous_Expenses</fullName>
    <active>true</active>
    <label>Miscellaneous Expenses</label>
</RecordType>