force-app/main/default/objects/Travels_Expenses__c/recordTypes/Sales_Expenses.recordType-meta.xml
<RecordType>
    <fullName>Sales_Expenses</fullName>
    <active>true</active>
    <label>Sales/Pre-Sales Expenses Only</label>
</RecordType>